<resources>
    <string name="app_name">Book Catalog</string>
    <string name="add_book">Add Book​</string>
    <string name="view_cat">View Catalog</string>
    <string name="exit">Exit</string>

    <string name="title_hint">Title​</string>
    <string name="author_hint">Author</string>
    <string name="year_hint">Year Published</string>
    <string name="desc_hint">Description</string>
    <string name="isbn_hint">ISBN</string>
    <string name="ebook_hint">EBook Available?</string>

    <string name="save">Save</string>

    <string name="toast_error">Please fill all information correctly</string>

    <string name="view_book_info">View Book Info</string>

    <string name="intent_int">position</string>
</resources>
