<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".AddBook">

    <EditText
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_hint"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/author_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/author_hint"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/year_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/year_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/desc_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/desc_hint"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/isbn_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/isbn_hint"
        android:inputType="text" />

    <Switch
        android:id="@+id/ebook_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ebook_hint" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="18sp" />

</LinearLayout>